--- a/.github/workflows/build-sw.yml
+++ b/.github/workflows/build-sw.yml
@@ -16,6 +16,9 @@ jobs:
       
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
+
+    - name: Restore NuGet Packages
+      run: nuget restore KFDtool.sln
       
     - name: Build Solution
       run: msbuild sw/control/KFDtool.sln /p:Configuration=Release
