--- a/sw/control/KFDtool.Gui/App.config
+++ b/sw/control/KFDtool.Gui/App.config
@@ -1,6 +1,30 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="KFDtool.Gui.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <KFDtool.Gui.Properties.Settings>
+            <setting name="TwiComPort" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DliHostname" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DliVariant" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="DeviceType" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="KfdDeviceType" serializeAs="String">
+                <value />
+            </setting>
+        </KFDtool.Gui.Properties.Settings>
+    </userSettings>
 </configuration>
