Updated theme to be selectable Light/Dark/System

--- a/sw/control/KFDtool.Gui/App.config
+++ b/sw/control/KFDtool.Gui/App.config
@@ -25,6 +25,9 @@
             <setting name="KfdDeviceType" serializeAs="String">
                 <value />
             </setting>
+            <setting name="SelectedTheme" serializeAs="String">
+                <value />
+            </setting>
         </KFDtool.Gui.Properties.Settings>
     </userSettings>
 </configuration>
