--- a/sw/control/KFDtool.Gui/Properties/Settings.settings
+++ b/sw/control/KFDtool.Gui/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="KfdDeviceType" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="ThemeType" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
